<resources>
    <string name="app_name">Interfaces</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="login">Ingresar</string>
    <string name="register">Registro</string>
    <string name="save">Guardar</string>
    <string name="error">Error</string>
    <string name="reg_adv">Registro requerido</string>
    <string name="login_adv">Inicio exitoso</string>
    <string name="session">Última sesión</string>
    <string name="logout">Salir</string>
    <string name="remember">Recordar credenciales</string>

</resources>
