<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/mUserRegister"
        android:hint="@string/user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:inputType="textPassword"
        android:id="@+id/mPasswordRegister"
        android:hint="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btnRegisterUser"
        android:text="@string/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>