<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mx.com.idmexico.vvazquez.interfaces.MainActivity">

    <EditText
        android:id="@+id/activity_main_usuario"
        android:hint="@string/user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/activity_main_contrasenia"
        android:inputType="textPassword"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/activity_main_usuario"
        android:hint="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <CheckBox
        android:id="@+id/chkPref"
        android:text="@string/remember"
        android:layout_below="@id/activity_main_contrasenia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Space
            android:visibility="visible"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:layout_weight="1"
            android:text="@string/login"
            android:id="@+id/activity_main_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:layout_weight="1"
            android:text="@string/register"
            android:id="@+id/activity_main_registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</RelativeLayout>
